fix logo and background stretching

--- a/styles.css
+++ b/styles.css
@@ -71,8 +71,9 @@ body {
 .background_image {
   position: relative;
   margin: 0;
-  max-height: 100vh;
+  height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .image_foreground {
@@ -109,7 +110,7 @@ a:visited {
 }
 
 .logo_image {
-  width: 25%;
+  width: 100px;
 }
 
 .logo_text {
